# rocon_composer

./: .env  .gitignore  CMakeLists.txt  Gulpfile.js  Procfile  README.md  SHIM.md  TIP.md  bower.json  bundle.js  cli.js  delme.js  engine.js  engine_manager.js  engine_runner.js  index.js  io.js  model.js  package.json  package.xml  requester.js  rocon_authoring.js  rocon_authoring_cli.js  routes.js  service_store.js  utils.js
env-hooks/: 25.rocon-authoring.sh.em
rocon_composer_blockly/: .gitignore  Gulpfile.js  Procfile  README.md  bower.json  config.json.sample  package.json  package.xml  rocon_composer_blockly.js  rocon_composer_blockly_cli.js
rocon_composer_blockly/env-hooks/: rocon_composer_blockly_env.sh
rocon_composer_blockly/public/: blockly.js  bundle.js
rocon_composer_blockly/public/css/: styles.css
rocon_composer_blockly/public/js/: app2.js  block_gen.js  config.json  undo_manager.js
rocon_composer_blockly/public/js/blocks/: index.js  lodash.js  prezi.js  ros_action.js  ros_misc.js  ros_msg.js  ros_pubsub.js  ros_requester.js  ros_service.js  ui.js  utils.js
rocon_composer_blockly/public/js/ctrls/: apps_ctrl.js  hic_app_form_ctrl.js  rapp_form_ctrl.js  root_ctrl.js  services_form_ctrl.js  workflow_blockly_ctrl.js  workflow_index_ctrl.js
rocon_composer_blockly/public/js/ctrls/modal/: package_select_ctrl.js
rocon_composer_blockly/public/js/schema/: service_form.json
rocon_composer_blockly/public/js/services/: services.js
rocon_composer_blockly/public/js/tpl/: apps.html  block_config.html  blockly.html  dashboard_resources.html  hic_app_form.html  modal_items_select.html  rapp_form.html  services.html  workflow_index.html
rocon_composer_blockly/public/js/tpl/modal/: package_select.html
rocon_composer_blockly/public/less/: styles.less
rocon_composer_blockly/src/: github_repository.js  github_store.js  hic_app.js  index.js  rapp.js  resource_manager.js  ros.js  routes.js  service_store.js  utils.js
rocon_composer_blockly/src/generators/: hic_app.js  mixin.js  rapp.js  service.js
rocon_composer_blockly/views/: index.html  layout.html  prezi.html
src/: index.js  (+4 more)
(+65 files in other folders)
