<?xml version="1.0"?>
<package>
  <name>rocon_authoring</name>
  <version>0.1.0</version>
  <description>The rocon_authoring package</description>
  
  <maintainer email="eunsub@gmail.com">eunsub</maintainer>
  <maintainer email="dwlee@yujinrobot.com">dwlee</maintainer>
  <author>DongWook Lee</author>
  <license>BSD</license>
 
  <url type="website"></url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_authoring</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_authoring/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>